Changes to Engr Dept

--- a/engineering.html
+++ b/engineering.html
@@ -123,6 +123,18 @@
 			font-weight: bold;
 		}
 
+.design, .packet, .resource{
+	font-size: 1.5em;
+	font-weight: bold;
+}
+
+.engr-design-label, .engr-packet-label, .engr-resource-label{
+	font-size: 1.8em;
+	font-weight: bold;
+	text-align: center;
+	display: block;
+}
+
 		
 
 		/* CSS for Training */
@@ -159,9 +171,9 @@
 	<div class="page">
 		<h1 class="dept-welcome-label">Welcome to the Engineering page</h1>
 		<div class="dept-contents">
-			<label class="dept-label dept-training-label"  onclick="HTML_Manager.load('html/Engineering/Design.html')">Design</label>
-			<label class="dept-label dept-packet-label" onclick="HTML_Manager.load('html/Engineering/Engineering_Packet.html')">Engineering<br>Packet</label>
-			<label class="dept-label dept-resources-label" onclick="HTML_Manager.load('html/Engineering/Resources.html')">Resources</label>
+			<label class="dept-label" onclick="HTML_Manager.load('html/Engineering/Design.html')">Design</label>
+			<label class="dept-label" onclick="HTML_Manager.load('html/Engineering/Engineering_Packet.html')">Engineering<br>Packet</label>
+			<label class="dept-label" onclick="HTML_Manager.load('html/Engineering/Resources.html')">Resources</label>
 	    </div>
 		<article id="html-target-id" class="dept-html">
 		</article>
